; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_trace_functions_graph.c_print_graph_abs_time.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_trace_functions_graph.c_print_graph_abs_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_seq = type { i32 }

@NSEC_PER_SEC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"%5lu.%06lu |  \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, %struct.trace_seq*)* @print_graph_abs_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_graph_abs_time(i64 %0, %struct.trace_seq* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.trace_seq*, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store %struct.trace_seq* %1, %struct.trace_seq** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i32, i32* @NSEC_PER_SEC, align 4
  %8 = call i64 @do_div(i64 %6, i32 %7)
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = udiv i64 %9, 1000
  store i64 %10, i64* %5, align 8
  %11 = load %struct.trace_seq*, %struct.trace_seq** %4, align 8
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call i32 @trace_seq_printf(%struct.trace_seq* %11, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i64 %12, i64 %13)
  ret void
}

declare dso_local i64 @do_div(i64, i32) #1

declare dso_local i32 @trace_seq_printf(%struct.trace_seq*, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
